# agentic-bte

./: .env.example  .gitignore  AGENTIC_BTE_WHITEPAPER.md  CHANGELOG.md  CLEANUP_SUMMARY.md  COMMIT_HISTORY.md  COMPLETE_ENTITY_FIX_SUMMARY.md  COMPREHENSIVE_FEATURE_ANALYSIS.md  CONTRIBUTING.md  DEBUGGING_GUIDE.md  ENTITY_RESOLUTION_FIX_SUMMARY.md  EXPLAINABILITY_ENHANCEMENT_SUMMARY.md  FINAL_RELEASE_CHECKLIST.md  LICENSE  LOCAL_BTE_SUCCESS_SUMMARY.md  METAKG_OPTIMIZER_REPORT.json  MIGRATION_ANALYSIS.md  PLACEHOLDER_MAPPING_ANALYSIS.md  PUBLIC_READINESS_REPORT.md  PUBLIC_RELEASE_FIXES_APPLIED.md  README.md  SERVER_BUG_ASSESSMENT.md  SESSION_COMMIT_HISTORY_20260130.md  TEST_SUITE_VERIFICATION.md  WARP.md  call_mcp_tool.py  clean_notebooks.py  compare_prototype_unified.py  compare_report.md  debug_enhanced_got_demo.py  demo_complete_system.py  demo_enhanced_got_system.py  demo_got_functionality.py  final_demo.py  fix_entity_resolution.py  got_presentation_20250930_080057.txt  got_presentation_20250930_104938.txt  got_presentation_20250930_105032.txt  got_presentation_20250930_113618.txt  got_presentation_20250930_114202.txt  (+44 more)
Prototype/: 08.05.25_inputPromptTuning_25q-Copy1.ipynb  08.05.25_inputPromptTuning_25q_gpt4.ipynb  08.13.25_differentmodels_25q-gpt4.1.ipynb  08.13.25_differentmodels_25q-gpt4o.ipynb  08.13.25_differentmodels_25q-gpt4oando3.ipynb  08.13.25_mechanisticgenes_25q-gpt4.1.ipynb  08.13.25_metabolites_25q-gpt4.1.ipynb  08.20.25_differentmodels_25q-gpt5.ipynb  50questions_diseasefromdrugbp_7.22.25.ipynb  50questions_drugfromdiseasebp_7.22.25.ipynb  50questions_drugfromdiseasebp_7.30.25.ipynb  50questions_drugfromdiseasebp_8.04.25.ipynb  50questions_drugfromdiseasebp_9.03.25.ipynb  50questions_mechanisticgenes_9.03.25.ipynb  50questions_metabolites_9.03.25.ipynb  Agent.py  BioNER cosine similarity.ipynb  KRAGEN_MCQ2hop_7.22.25_scispacy_lg.ipynb  KRAGEN_MCQ2hop_7.22.25_scispacy_md-Copy1.ipynb  KRAGEN_MCQ2hop_7.22.25_scispacy_md.ipynb  KRAGEN_MCQ2hop_7.22.25_scispacy_scibert-Copy1.ipynb  KRAGEN_MCQ2hop_7.22.25_scispacy_scibert.ipynb  KRAGEN_MCQ2hop_7.22.25_scispacy_sm.ipynb  KRAGEN_MCQ_7.22.25-Copy1.ipynb  KRAGEN_MCQ_7.22.25.ipynb  NER Pipeline Design.ipynb  NER Pipeline Test.ipynb  README.md  Test.py  Test_copy.py  Test_copy2.py  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  __init__.py  bte_client.py  got_planner.py  langgraph_agent.py  predicate_strategy.py  run_agent.py  (+3 more)
Prototype/tests/: test_demo_print.py  test_end_to_end.py  test_langgraph_agent.py
Prototype/tools/: BTECall.py  BioNER.py  __init__.py
agentic_bte/: __init__.py
agentic_bte/agents/: __init__.py  nodes.py  orchestrator.py  rdf_manager.py  state.py
agentic_bte/config/: __init__.py  settings.py
agentic_bte/exceptions/: base.py  entity_errors.py
agentic_bte/scripts/: __init__.py
agentic_bte/unified/: README_ExecutionEngine.md  __init__.py  agent.py  config.py  entity_processor.py  execution_engine.py  got_planner.py  knowledge_manager.py  parallel_executor.py  performance.py  strategy_router.py  types.py
archive_dev_files_20260130/: DEBUG_SESSION_REPORT.md  LANGGRAPH_COMPARISON_REPORT.json  OPTIMIZATION_COMPARISON_REPORT.json  apply_system_fixes.py  configure_local_bte.py  diagnose_entity_resolution.py  diagnose_local_bte.py  entity_filter_enhancement.py  fix_final_answer_entity_resolution.py  got_presentation_20250930_080206.txt  got_presentation_20250930_122918.txt  got_presentation_20250930_125210.txt  got_presentation_20251001_082424.txt  got_presentation_20251001_095036.txt  got_presentation_20251001_103528.txt  got_result_20250930_080206.json  got_result_20250930_133732.json  got_result_20251001_082424.json  got_result_20251001_083859.json  got_result_20251001_103528.json  got_result_20251002_143840.json  inspect_trapi_queries.py  investigate_entity_specificity.py  investigate_kg_nodes.py  run_10_question_benchmark.py  run_10_question_bte_benchmark.py  stateful_got_optimizer.py  test_minimal_got_flow.py  verify_json_fix.py
archive_dev_files_20260130/got_test_results/: got_test_results_1759475637.json
archive_dev_files_20260130/legacy_tests/: test_core_functionality.py  test_demo_limited.py  test_local_bte.py  test_local_integration.py  test_production_got.py
debug_output/: got_decomposition.json  gotplanner_llm_output_latest.txt  warp_full_log.txt
docs/: architecture.md
docs/benchmarks/: BENCHMARK_COMPARISON_10_QUESTIONS.md
docs/deployment/: GITHUB_SETUP.md
docs/reports/: README_GOT_PRODUCTION.md
examples/: README.md  __init__.py  langgraph_agents.py  mcp_basic_usage.py
got_test_results/: got_test_report_1759475637.txt  got_test_summary_1759475637.json
legacy_tests/: test_entity_fix.py  test_fixes.py  test_got_comprehensive.py
scripts/: demo_batch_5_queries.py  demo_meta_filter.py  evaluate_llm_vs_system.py  generate_commit_history.py  validate_config.py
tests/: __init__.py  conftest.py
(+101 files in other folders)
