[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-bte"
version = "0.1.0"
description = "Agentic BioThings Explorer - AI-powered biomedical knowledge graph queries"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "BTE Research Team", email = "contact@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
keywords = ["bioinformatics", "knowledge-graph", "biomedical", "ai", "llm", "drug-discovery"]
requires-python = ">=3.10"
dependencies = [
    # Core dependencies
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "langchain-openai>=0.1.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    
    # Optional dependencies for enhanced functionality
    "spacy>=3.7.0",
    "scispacy>=0.5.0",
    
    # MCP server dependencies
    "mcp>=1.0.0",
    
    # LangGraph agent dependencies
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    
    # RDF processing (optional)
    "rdflib>=7.0.0",
    
    # Utilities
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0",
]

# Documentation dependencies
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.23.0",
]

# Testing dependencies with external services
test-external = [
    "pytest-httpserver>=1.0.0",
    "responses>=0.23.0",
]

# Jupyter notebook dependencies
notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

# All dependencies
all = [
    "agentic-bte[dev,docs,test-external,notebooks]"
]

[project.urls]
"Homepage" = "https://github.com/example/agentic-bte"
"Documentation" = "https://agentic-bte.readthedocs.io"
"Repository" = "https://github.com/example/agentic-bte"
"Bug Reports" = "https://github.com/example/agentic-bte/issues"

[project.scripts]
agentic-bte-mcp = "agentic_bte.servers.mcp.server:main"
agentic-bte-setup = "agentic_bte.scripts.setup:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentic_bte*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
agentic_bte = ["py.typed"]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_first_party = ["agentic_bte"]
known_third_party = [
    "langchain",
    "langchain_openai",
    "langgraph",
    "spacy",
    "scispacy",
    "pydantic",
    "requests",
    "numpy",
    "pandas"
]

# MyPy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "spacy.*",
    "scispacy.*",
    "mcp.*",
    "langgraph.*",
    "rdflib.*"
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "external: marks tests that require external services",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"

# Coverage configuration
[tool.coverage.run]
source = ["agentic_bte"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]